# aws-packages

./: Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
aws_packages/: __init__.py  _aws_packages.pyi  dynamo.py  responses.py  time.py
aws_packages/auth/: auth_backend_abc.py  auth_backend_base.py  auth_backend_icp.py  auth_backend_solana.py  exceptions.py  middlewares.py  models.py  settings.py  tokens.py  views.py
aws_packages/auth/icp/: auth_backend.py  middlewares.py  views.py
aws_packages/auth/solana/: auth_backend.py  middlewares.py  models.py  views.py
aws_packages/infra/: common_stack.py
src/: lib.rs
tests/: test_init.py
