[package]
name = "aws_packages"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aws_packages"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"


[package.metadata.maturin]
name = "aws_packages._aws_packages"

dependencies = [
    'boto3==1.34.79'
]